Fix header z-index

--- a/css/style.styl
+++ b/css/style.styl
@@ -63,6 +63,8 @@ header
   box-shadow 0 0 10px rgba(black, 0.5)
   user-select none
 
+  z-index 1
+
   .header-link
     display inline-block
 
